--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,4 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
@@ -39,4 +36,25 @@
 
 .read-the-docs {
   color: #888;
+}
+
+nav {
+  height: 4rem;
+  background-color: #646cffaa;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+nav a {
+  color: white;
+  text-decoration: none;
+  font-size: 1.25rem;
+  font-weight: 700;
+  margin: 0 2rem;
+}
+
+.StackTracker {
+  font-size: 1.8rem;
+  font-weight: bold;
+  padding: 40px;
 }
